--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus vitae fugiat doloremque eaque. Nobis, nesciunt consectetur? Cumque odit ut nobis libero voluptatem id recusandae, saepe, quidem ex rem quam magni? Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aliquam ab aspernatur eaque natus tempora? Minus consequuntur vel, expedita dolorum impedit unde repellendus quo culpa numquam tempore itaque quod odit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga maxime voluptates dolorem voluptatibus magni, sunt consequatur nulla corrupti quidem provident ipsum esse quisquam assumenda enim dignissimos, placeat aliquam optio laudantium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Non alias fugit, hic natus accusamus atque, sequi fugiat architecto maiores minima ea quia vero, ab sapiente nulla? Dolorem nam asperiores quia.</p>
         </article>
     </div>
+
+    <script>
+      let div = document.createElement('div')
+
+      div.textContent = 'Жопа'
+
+      document.body.append(div)
+    </script>
 </body>
 
 </html>
